<resources>
    <string name="app_name">PetListDB</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="pet_information">Pet Information</string>
    <string name="sex">Sex</string>
    <string name="breed_profile">Breed</string>
    <string name="colour_profile">Colour</string>
    <string name="distiguishing_marks">Distiguishing Marks</string>
    <string name="comments">Comments</string>
    <string name="owner">Owner</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="owner_address">Owner Address</string>
    <string name="owner_phone">Owner Phone</string>
    <string name="vet_name">Vet Name</string>
    <string name="vet_address">Vet Address</string>
    <string name="vet_phone">Vet Phone</string>
    <string name="chip_id">Chip ID</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="add_pet">Add Pet</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="delete_pet">Delete Pet</string>
    <string name="pet_name">Pet Name</string>
    <string name="date_of_birth_form">Date of Birth</string>
    <string name="genger">Genger</string>
    <string name="breed_form">Breed</string>
    <string name="colour_form">Colour</string>
    <string name="dist_marks">Dist. Marks</string>
    <string name="chip_id_form">Chip ID</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_address_form">Owner Address</string>
    <string name="owner_phone_form">Owner Phone</string>
    <string name="vet_name_form">Vet Name</string>
    <string name="vet_address_form">Vet Address</string>
    <string name="vet_phone_form">Vet Phone</string>
    <string name="comments_form">Comments</string>
    <string name="create_form">Create</string>
    <string name="save_edit">Save</string>
</resources>
