<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d1d1d1">

        <EditText
            android:id="@+id/petNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pet_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/petDateOfBirthEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date_of_birth_form"
            android:inputType="date" />

        <EditText
            android:id="@+id/petGengerEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/genger"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/petBreedEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/breed_form"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/petColourEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/colour_form"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/petDistMarksEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dist_marks"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/petChipIdEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/chip_id_form"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/petOwnerNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/owner_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/petOwnerAddressEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/owner_address_form"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/petOwnPhoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/owner_phone_form"
            android:inputType="phone" />

        <EditText
            android:id="@+id/petVetNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/vet_name_form"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/petVetAddressEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/vet_address_form"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/petVetPhoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/vet_phone_form"
            android:inputType="phone" />

        <EditText
            android:id="@+id/petCommentEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/comments_form"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/createPetEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_edit" />

    </LinearLayout>
</ScrollView>
